добавил пару оповещений, кнопку вопроса.

--- a/app/src/main/res/layout/activity_rest_day.xml
+++ b/app/src/main/res/layout/activity_rest_day.xml
@@ -1,4 +1,6 @@
 <!-- res/layout/activity_rest_day.xml -->
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,6 +28,7 @@
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Назад"
-        android:layout_marginTop="32dp" />
+        android:layout_marginTop="32dp"
+        android:text="Назад" />
+
 </LinearLayout>
