--- a/app/src/main/res/layout/activity_rest_day.xml
+++ b/app/src/main/res/layout/activity_rest_day.xml
@@ -18,11 +18,11 @@
 
     <TextView
         android:id="@+id/restDayDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="267dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="16dp"
         android:text="Отдыхайте и восстанавливайтесь! Следующая тренировка ждет вас."
-        android:textSize="16sp"
-        android:layout_marginTop="16dp" />
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/backButton"
